// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenGraphAction.js - flow-verify 1`] = `
// @flow

var OpenGraphValueContainer = require('./OpenGraphValueContainer.js');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

var OpenGraphValueContainer = require("./OpenGraphValueContainer.js");

`;

exports[`OpenGraphObject.js - flow-verify 1`] = `
// @flow

var OpenGraphValueContainer = require('./OpenGraphValueContainer.js');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

var OpenGraphValueContainer = require("./OpenGraphValueContainer.js");

`;

exports[`OpenGraphValueContainer.js - flow-verify 1`] = `
// @flow

var OpenGraphObject = require('./OpenGraphObject.js');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

var OpenGraphObject = require("./OpenGraphObject.js");

`;
